--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -77,7 +77,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Shreya Karmani</h2>
-        <p>I'm <span class="typed" data-typed-items="Software Engineer, Data Scientist, Student"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I'm a <span class="typed" data-typed-items="Software Engineer, Data Scientist, Student"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
